testsuite/poke.pkl/add-1.pkl
/* { dg-do compile } */

defun add_wrong = () void:
  {
   defvar a = 10;
   return a + "foo"; /* { dg-error "invalid operands" } */
  }
